messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service-blue
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: messaging-app
    version: blue
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service-green
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: messaging-app
    version: green
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service-active
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: messaging-app
    version: blue  # Initially points to blue
